fixed button alignment issues

--- a/src/style.css
+++ b/src/style.css
@@ -23,10 +23,13 @@ html {
   height: 100vh;
   background: var(--secondary-background);
 
-  /* These three lines make the App pass all fCC test, but I feel the design is better without them. */
+  /* 
+  These three lines make the App pass all fCC test, but I feel the design is better without them.
+  
   display: flex;
   justify-content: center;
   align-items: center;
+  */
 }
 
 #text {
@@ -37,12 +40,15 @@ html {
   background: var(--primary-background);
   box-shadow: 2px 2px 3px var(--dark-shadow), -2px -2px 3px var(--light-shadow);
   color: var(--primary-text);
+  width: calc(100vw - 15vh);
   height: 90vh;
   border-radius: 0 0 30vw 0;
+  position: relative;
+  z-index: 1;
 }
 
 #text h1 {
-  margin: 2vw;
+  margin: 2.5vw;
   position: relative;
   top: -10%;
   font-size: 150%;
@@ -64,6 +70,14 @@ html {
   transition: box-shadow 0.2s;
   color: var(--primary-background);
   text-shadow: 2px 2px 3px var(--dark-shadow), -2px -2px 3px var(--light-shadow);
+  z-index: 0;
+  min-width: 5em;
+  min-height: 5em;
+  width: 20vh;
+  height: 20vh;
+  position: absolute;
+  left: calc(100vw - 25vh);
+  top: 75vh;
 }
 
 #new-quote:hover {
@@ -87,32 +101,4 @@ html {
   margin: 1vw;
   width: 5rem;
   height: 1rem;
-}
-
-@media (orientation: landscape) {
-  #text {
-    width: calc(100vw - 20vh);
-  }
-
-  #new-quote {
-    width: 20vh;
-    height: 20vh;
-    position: absolute;
-    left: calc(100vw - 30vh);
-    top: 70vh;
-  }
-}
-
-@media (orientation: portrait) {
-  #text {
-    width: calc(100vw - 15vh);
-  }
-
-  #new-quote {
-    width: minmax(min-content, 15vh);
-    height: minmax(min-content, 15vh);
-    position: absolute;
-    left: 80vw;
-    top: calc(100vh - 20vw);
-  }
 }
